--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.application.name=FunshopperService
+appName=FunshopperService
+maxCharForLog=3850
+server.port=8080
+
+spring.profiles.active=local
+
+feign.hystrix.enabled=true
+feign.hystrix.
+
+
+
 
